更新屏蔽功能的实现逻辑。

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Desktop/BiliCopilot.UI/BiliCopilot.UI_TemporaryKey.pfx
+/.gitignore
+/.gitignore
