--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,5 @@ FodyWeavers.xsd
 /Desktop/BiliCopilot.UI/BiliCopilot.UI_TemporaryKey.pfx
 /.gitignore
 /.gitignore
+/Desktop/BiliCopilot.UI/BiliCopilot.UI_TemporaryKey.pfx
+/.gitignore
